# journal-triggerd

./: .gitignore  AUTHORS  HISTORY  Makefile.am  README.md  autogen.sh  configure.ac  journal-triggerd.pod  journal-triggerd.service  journal-triggerd.service.in  macros.h  main.c
